--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
+        <string name="navigation_drawer_open">Open Navigation
+Drawer</string>
+    <string name="navigation_drawer_close">Close Navigation
+Drawer</string>
     <string name="app_name">Pertemuan 3</string>
     <string name="deskription_menu">deskripsi</string>
     <string name="cenil">cenil</string>
